# WebClassifier

./: README.md  classificador.py  main.py  pyproject.toml
