[tool.poetry]
name = "webclassifier"
version = "0.1.0"
description = ""
authors = ["sebasthub <playandroidhb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyppeteer = "^2.0.0"
tensorflow = "^2.16.1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
